--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+  }
+
 body {
     /* background-color: #f5f1f1; */
     background-image: url("https://savageuniversal.com/wp-content/uploads/2015/05/1-whitebrick-update-1-1000x1000.jpg");
@@ -52,12 +56,7 @@ body {
     background-color: #555;
   }
   
-  @media screen and (max-width: 650px) {
-    .column {
-      width: 100%;
-      display: block;
-    }
-  }
+
 
   /* Contact.html styling */
 
@@ -87,30 +86,36 @@ input[type=text], select, textarea {
   /* Style the container/contact section */
   .container {
     margin-top: 30px;
-    margin-left: 150px;
-    margin-right: 150px;
     background-color: rgba(187, 187, 187, 0.75);
     padding: 20px;
   }
   
   /* Create two columns that float next to eachother */
-  .column {
+  .col {
     float: left;
     width: 50%;
     margin-top: 6px;
-    padding: 20px;
+    padding: 10px;
+    color: #445161;
   }
-  
+   
+  #Taco{
+    border: 5px;
+    border-style: solid;
+    border-color: #445161;
+  }
+
   /* Clear floats after the columns */
   .row:after {
     content: "";
     display: table;
     clear: both;
   }
+
   
   /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
   @media screen and (max-width: 600px) {
-    .column, input[type=submit] {
+    .col, input[type=submit] {
       width: 100%;
       margin-top: 0;
     }
