--- a/style.css
+++ b/style.css
@@ -103,6 +103,7 @@ input[type=text], select, textarea {
     border: 5px;
     border-style: solid;
     border-color: #445161;
+    width: 100%;
   }
 
   /* Clear floats after the columns */
@@ -115,9 +116,11 @@ input[type=text], select, textarea {
   
   /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
   @media screen and (max-width: 600px) {
-    .col, input[type=submit] {
-      width: 100%;
-      margin-top: 0;
+    .row {
+        flex-direction: column;
+    }
+    .col{
+        width: 100%;
     }
   }
 
