--- a/style.css
+++ b/style.css
@@ -38,6 +38,11 @@ body {
   font-size: 20px;
   font-weight: normal;
   }
+
+  #indexList{
+      padding-left: 20px;
+      font-size: 15px;
+  }
   
   .button {
     margin-top: 30px;
