--- a/style.css
+++ b/style.css
@@ -118,6 +118,12 @@ input[type=text], select, textarea {
     clear: both;
   }
 
+ #placeholder{
+    border: 5px;
+    border-style: solid;
+    border-color: #445161;  
+ }
+
   
   /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
   @media screen and (max-width: 600px) {
