portfolio divs. linked to media query and styled to match the rest of the website.

--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
   }
 
 body {
-    /* background-color: #f5f1f1; */
     background-image: url("https://savageuniversal.com/wp-content/uploads/2015/05/1-whitebrick-update-1-1000x1000.jpg");
     padding: 25px;
     background-repeat: repeat;
@@ -61,11 +60,7 @@ body {
     background-color: #555;
   }
   
-
-
-  /* Contact.html styling */
-
-  
+/* Contact.html styling */ 
 /* Style inputs */
 input[type=text], select, textarea {
     width: 100%;
@@ -94,6 +89,14 @@ input[type=text], select, textarea {
     background-color: rgba(187, 187, 187, 0.75);
     padding: 20px;
   }
+
+  .containerfoot {
+    margin-top: 30px;
+    background-color: rgba(187, 187, 187, 0.75);
+    padding: 20px;
+    float: none;
+    text-align: center;
+  }
   
   /* Create two columns that float next to eachother */
   .col {
@@ -104,7 +107,7 @@ input[type=text], select, textarea {
     color: #445161;
   }
    
-  #Taco{
+  #code{
     border: 5px;
     border-style: solid;
     border-color: #445161;
@@ -127,13 +130,19 @@ input[type=text], select, textarea {
   
   /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
   @media screen and (max-width: 600px) {
-    .row {
+    #media {
         flex-direction: column;
     }
     .col{
         width: 100%;
+    
+    }
+    #portmedia{
+        flex-direction: column;
     }
   }
+  
+ 
 
 
 
